--- a/GeometreTest/Views/Home/Index.cshtml
+++ b/GeometreTest/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 
 <form asp-action="Index">
     <div class="text-center">
-        <h1 class="display-4">Welcome</h1>
+        <h1 class="display-4">Welcome yes</h1>
         <p><label>Enter Radius</label></p>
         <p><input type="number" asp-for="Radius"></p>
         <p><input type="submit" /></p>
